--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,25 @@
     }
 
     .box {
-      background-color: grey;
+      width: 400px;
+      background-color: rgb(229, 229, 229);
       padding: 20px;
+
+      .data-line {
+        display: flex;
+        gap: 10px;
+
+        .icon-style {
+          height: 20px;
+          width: 20px;
+        }
+
+        .data-line-wrapper {
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+        }
+      }
     }
   }
 }
