--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,12 @@
     }
 
     .box {
+      display: flex;
+      flex-direction: column;
+      margin-top: 15px;
+      gap: 15px;
       width: 400px;
-      background-color: rgb(229, 229, 229);
+      background-color: rgb(236, 236, 236);
       padding: 20px;
 
       .data-line {
@@ -28,6 +32,22 @@
           justify-content: space-between;
           width: 100%;
         }
+      }
+
+      .divider {
+        width: 100%;
+        background-color: rgb(36, 36, 36);
+        height: 1px;
+      }
+
+      .bottom-button {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        color: white;
+        background-color: rgb(249, 79, 79);
+        border-radius: 10px;
+        line-height: 35px;
       }
     }
   }
