--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
       .data-line {
         display: flex;
+        align-items: center;
         gap: 10px;
 
         .icon-style {
@@ -36,6 +37,16 @@
 
       .divider {
         width: 100%;
+        background-color: rgb(36, 36, 36);
+        height: 1px;
+      }
+
+      .extended-divider {
+        display: flex;
+        align-items: center;
+        margin-left: -20px;
+        margin-right: -20px;
+        width: 100% + 40px;
         background-color: rgb(36, 36, 36);
         height: 1px;
       }
